<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/IvMainFotoProfil"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorAccent" />

            <EditText
                android:id="@+id/ETNipUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/labelnip"
                android:inputType="number" />

            <EditText
                android:id="@+id/ETNamaUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/labelname" />

            <EditText
                android:id="@+id/ETNoTelpUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/labeltelp"
                android:inputType="number"
                android:maxLength="12" />

            <EditText
                android:id="@+id/ETKtpUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/labelNoKtp"
                android:inputType="number"
                android:maxLength="16" />

            <EditText
                android:id="@+id/ETNoSim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/labelNoSimUser"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/labelFotoKtp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/IvMainFotoKtp"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/labelFotoSimUser"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/IvMainFotoSim"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/TvlabelMainFotoTtd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/labelFotoTtd"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/IvMainFotoTtd"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorAccent"
                android:visibility="gone" />

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/RlTtd"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:visibility="gone"
                tools:context=".MainActivity">

                <RelativeLayout
                    android:id="@+id/signature_pad_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/buttons_container">


                    <com.github.gcacace.signaturepad.views.SignaturePad
                        android:id="@+id/signature_pad"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@color/colorAccent" />

                    <TextView
                        android:id="@+id/signature_pad_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="30dp"
                        android:text="@string/agreement"
                        android:textColor="@android:color/holo_red_light"
                        android:textStyle="bold" />


                </RelativeLayout>


                <LinearLayout
                    android:id="@+id/buttons_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal"
                    android:paddingTop="16dp">

                    <Button
                        android:id="@+id/clear_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:text="@string/clear_pad" />

                    <Button
                        android:id="@+id/save_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:text="@string/save_signature" />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/Pbregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />


    <!--    <Button-->
    <!--        android:id="@+id/BtnListUser"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_above="@id/BtnSaveUser"-->
    <!--        android:text="@string/view"-->
    <!--        android:visibility="visible">-->

    <!--    </Button>-->

    <!--    <Button-->
    <!--        android:id="@+id/BtnSaveUser"-->
    <!--        android:visibility="gone"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_alignParentBottom="true"-->
    <!--        android:text="@string/Save">-->
    <!--    </Button>-->

    <!--    <Button-->
    <!--        android:id="@+id/BtnUpdateUser"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:visibility="gone"-->
    <!--        android:layout_alignParentRight="true"-->
    <!--       android:layout_alignLeft="@id/BtnSaveUser"-->
    <!--        android:text="@string/update">-->

    <!--    </Button>-->
    <LinearLayout
        android:id="@+id/LLBtnPeserta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/BtnSaveUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/Save"
            android:textStyle="bold|italic"
            android:visibility="visible" />

        <Button
            android:id="@+id/BtnUpdateUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/update"
            android:textStyle="bold|italic"
            android:visibility="visible" />

        <Button
            android:id="@+id/BtnListUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/view"
            android:textStyle="bold|italic" />

    </LinearLayout>


</RelativeLayout>
